# homebrew-rs

./: .gitignore  Cargo.toml  README.md
examples/: brew.rs  config.rs  info.rs  info_all.rs  install.rs
examples/data/: all.json  kitty.json  wget.json
src/: config.rs  lib.rs
src/brew/: brew.rs  info.rs  list.rs  mod.rs
src/command/: cmd.rs  config.rs  info.rs  install.rs  list.rs  mod.rs  search.rs  service.rs
src/model/: cask.rs  config.rs  formula.rs  mod.rs  package.rs  service.rs
