[package]
name = "homebrew"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["wxnacy@gmail.com"]
description = "A rust wrapper around the homebrew package"
repository = "https://github.com/wxnacy/homebrew-rs"

[dependencies]
tabled = "0.17.0"
anyhow = "1.0.95"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
